--- a/src/App.css
+++ b/src/App.css
@@ -9,12 +9,18 @@
 
 
 .button-home {
-  height: 40px ;
-  padding-right: 12px ;
-  padding-left: 12px;
-  border-radius: var(--radius-lg);
-  text-align: center;
+  height: 40px;
+  border-color: black;
+  border-width: 2px;
+  padding-left: 13px;
+  padding-right: 13px;
+  border-radius: 500px;
   cursor: pointer;
-  font-family: sans-serif;
-  
+  font-weight: 500;
+
+}
+
+.button-home:hover {
+  --tw-shadow: 2px 2px 0px var(--tw-shadow-color, rgba(0, 0, 0, 1));
+  box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
 }
