binary tree component height increased

--- a/src/src/style/radio.css
+++ b/src/src/style/radio.css
@@ -14,12 +14,31 @@
   /* box-shadow: 4px 4px var(--main-color); */
 }
 
+/* Ajouter un pseudo-élément pour la bulle qui slide */
+.wrapper::before {
+  content: '';
+  position: absolute;
+  width: 90px;
+  height: 32px;
+  background-color: var(--main-color);
+  border-radius: 50px;
+  top: 2px;
+  left: 2px;
+  transition: transform 0.3s ease;
+  z-index: 1;
+}
+
+.wrapper:has(.option:nth-child(2) .input:checked)::before {
+  transform: translateX(92px);
+}
+
 .option {
   width: 90px;
   height: 32px;
   position: relative;
   top: 2px;
   left: 2px;
+  z-index: 2;
 }
 
 .input {
@@ -35,20 +54,16 @@
 .btn {
   width: 100%;
   height: 100%;
-  background-color: var(--bg-color);
+  background-color: transparent;
   border-radius: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
-  
 }
 
 .span {
   color: var(--font-color-dark);
-}
-
-.input:checked + .btn {
-  background-color: var(--main-color);
+  transition: color 0.3s ease;
 }
 
 .input:checked + .btn .span {
