--- a/src/src/style/App.css
+++ b/src/src/style/App.css
@@ -17,6 +17,12 @@
   border-radius: 500px;
   cursor: pointer;
   font-weight: 500;
+  color: white
+}
+
+.button-home:hover {
+  --tw-shadow: 2px 2px 0px var(--tw-shadow-color, rgba(0, 0, 0, 1));
+  box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
 }
 
 .button-red {
@@ -72,7 +78,3 @@
 }
 
 
-.button-home:hover {
-  --tw-shadow: 2px 2px 0px var(--tw-shadow-color, rgba(0, 0, 0, 1));
-  box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-}
