--- a/src/src/style/Explainations.css
+++ b/src/src/style/Explainations.css
@@ -16,12 +16,36 @@
   padding-bottom: 1px;
 }
 
+.tab-bar
+{
+  width: 100%;
+  flex: auto;
+  height: 60px;
+  align-items: center;
+  border-radius: 20px;
+  margin-bottom: 8px;
+}
+
+.tab-option
+{
+  flex: auto;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
 @media (min-width: 640px) {
   .card {
       border-width: 3px;
   border-color: black;
   border-radius: 20px;
-  --tw-shadow: 10px 10px 0px var(--tw-shadow-color, #000000);
+  --tw-shadow: 8px 8px 0px var(--tw-shadow-color, #000000);
+  box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+  }
+  .tab-bar {
+      border-width: 3px;
+  border-color: black;
+  --tw-shadow: 4px 4px 0px var(--tw-shadow-color, #000000);
   box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
 
   }
