--- a/src/src/style/App.css
+++ b/src/src/style/App.css
@@ -17,7 +17,11 @@
   border-radius: 500px;
   cursor: pointer;
   font-weight: 500;
-  color: white
+  color: white;
+  transition-property: all;
+  transition-timing-function: var(--tw-ease, var(--default-transition-timing-function) /* cubic-bezier(0.4, 0, 0.2, 1) */);
+  transition-duration: var(--tw-duration, var(--default-transition-duration) /* 150ms */);
+
 }
 
 .button-home:hover {
@@ -34,7 +38,11 @@
   border-radius: 500px;
   cursor: pointer;
   font-weight: 500;
-  color: rgb(0, 0, 0)
+  color: rgb(0, 0, 0);
+  transition-property: all;
+  transition-timing-function: var(--tw-ease, var(--default-transition-timing-function) /* cubic-bezier(0.4, 0, 0.2, 1) */);
+  transition-duration: var(--tw-duration, var(--default-transition-duration) /* 150ms */);
+
 }
 
 .button-home-black:hover {
